--- a/app/views/templates/base.html.erb
+++ b/app/views/templates/base.html.erb
@@ -1,5 +1,12 @@
-<h1>
-  <%= @page.title %>
-</h1>
+<div>Base</div>
 
-<h2>Base</h2>
+<h1><%= @page.title %></h1>
+
+<% page_content.each do |k,v| %>
+  <div>
+    <p>
+      <strong><%= k %></strong>
+      <%= v %>
+    </p>
+  </div>
+<% end %>
